# nexus32-sdk

./: .gitignore  CMakeLists.txt  README.md  build.toml  smoke-build.toml
.github/workflows/: ci.yml
compiler/nxasm/: main.c
compiler/nxcc/: main.c
lib/include/: nx_asset.h  nx_audio.h  nx_debug.h  nx_gfx.h  nx_input.h  nx_math.h  nx_mem.h  nx_save.h  nx_sys.h  nx_vec.h
lib/src/: asset.asm  audio.asm  crt0.asm  debug.asm  gfx.asm  gfx.c  input.asm  input.c  math.asm  mem.asm  save.asm  sys.asm  sys.c
linker/nxld/: main.c
test/: gfx_main.c  minimal.asm
tools/img2tex/: main.c
tools/map2lvl/: main.c
tools/nxbuild/: main.c
tools/obj2mesh/: main.c
tools/shaderc/: main.c
tools/wav2smp/: main.c
